# audio-spectrum-visualizer

./: .clangd  .gitattributes  .gitignore  LICENSE-APACHE  LICENSE-MIT  compile_commands.json  readme.md  release.ps1  xmake.lua
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
c_core/: xmake.lua
c_core/include/: fft_processor.h  test_bridge.h  wasapi_capture.h
c_core/src/: fft_processor.c  test_bridge.c  wasapi_capture.c
python_ui/: generate_stub.py  spectrum_engine.pyi  test.py
rust_engine/: Cargo.toml  build.rs
rust_engine/src/: lib.rs
spectrum_ui/: README.md  analysis_options.yaml  pubspec.yaml
spectrum_ui/lib/: engine_bridge.dart  main.dart
spectrum_ui/test/: widget_test.dart
spectrum_ui/windows/: CMakeLists.txt
spectrum_ui/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
