[package]
name = "spectrum_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "spectrum_engine"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"

[dependencies.windows]
version = "0.52"
features = ["Win32_Foundation"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
