[package]
name = "spectrum_engine"
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "spectrum_engine"
crate-type = ["cdylib"]

[dependencies]
realfft = "3.3"
arc-swap = "1.7"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
